--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Amazing Portfolio Duh</title>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <h1>cats</h1>
-    <p>Hello World</p>
+    
+   <header class="hero-box">
+   <section class="hero-img-box">
+    <img class="hero.img" src="img/cityimage.jpg" alt="photo of Uptown by Me" />
+    </section>
+    </header>
+ </header>
   </body>
-  <img src="img/cityimage.jpg" alt="photo of Uptown by Me" />
 </html>
+<h1>cats</h1>
+    <p>Hello World</p>
+    <p class="myColor">I am a different color</p>
+    <p class="myColorTwo">This is another class that makes Blue</p>
