put text in image

--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    
-   <header class="hero-box">
-   <section class="hero-img-box">
-    <img class="hero.img" src="img/cityimage.jpg" alt="photo of Uptown by Me" />
-    </section>
+    <header class="hero-box">
+      <section class="hero-image-box">
+        <img
+          class="hero-image"
+          src="img/cityimage.jpg"
+          alt="photo of Uptown by Me"
+        />
+      </section>
+      <section class="hero-text-box">
+        <h1 class="hero-heading">Cats</h1>
+        <p class="hero-text"></p>
+      </section>
     </header>
- </header>
   </body>
 </html>
-<h1>cats</h1>
-    <p>Hello World</p>
-    <p class="myColor">I am a different color</p>
-    <p class="myColorTwo">This is another class that makes Blue</p>
