added overlay and moblie styles

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </section>
       <section class="hero-text-box">
         <h1 class="hero-heading">Cats</h1>
-        <p class="hero-text"></p>
+        <p class="hero-text">cats are cool</p>
       </section>
     </header>
   </body>
