--- a/index.html
+++ b/index.html
@@ -21,5 +21,65 @@
         <p class="hero-text">cats are cool</p>
       </section>
     </header>
+    <!-- Begin Portfolio Gallery -->
+    <section class="portfolio-gallery">
+      <h1>Portfolio</h1>
+      <div class="gallery-item">
+        <a class="glightbox" href="img/cityimage2.JPG">
+          <img
+            class="gallery-img"
+            src="img/cityimage2.JPG"
+            alt="image of Uptown"
+        /></a>
+      </div>
+      <div class="gallery-item">
+        <a class="glightbox" href="img/cityimage3.JPG">
+          <img
+            class="gallery-img"
+            src="img/cityimage3.JPG"
+            alt="another image of Uptown"
+        /></a>
+      </div>
+      <div class="gallery-item">
+        <a class="glightbox" href="img/cityimage4.JPG">
+          <img
+            class="gallery-img"
+            src="img/cityimage4.JPG"
+            alt="image of Cleveland"
+        /></a>
+      </div> <div class="gallery-item">
+        <a class="glightbox" href="img/cityimage5.JPG">
+          <img
+            class="gallery-img"
+            src="img/cityimage5.JPG"
+            alt="Image of the city"
+        /></a>
+      </div> <div class="gallery-item">
+        <a class="glightbox" href="img/crystals 1.JPG">
+          <img
+            class="gallery-img"
+            src="img/crystals 1.JPG"
+            alt="image of crystals and jewelry"
+        /></a>
+      </div> <div class="gallery-item">
+        <a class="glightbox" href="img/beddingimage.JPG">
+          <img
+            class="gallery-img"
+            src="img/beddingimage.JPG"
+            alt="image of bedding"
+        /></a>
+      </div> <div class="gallery-item">
+        <a class="glightbox" href="">
+          <img
+            class="gallery-img"
+            src=""
+            alt=""
+        /></a>
+      </div>
+    </section>
+  </body>
+</html>
+
+    </section>
   </body>
 </html>
