--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
     <title>My Amazing Portfolio Duh</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/glightbox.min.css">
+    <link rel="stylesheet" href="css/all.min.css">
   </head>
   <body>
     <header class="hero-box">
       <section class="hero-image-box">
-        <img
+        <!-- <img
           class="hero-image"
           src="img/cityimage.jpg"
           alt="photo of Uptown by Me"
-        />
+        /> -->
+        <video src="video/video-for-portfolio.mp4" class="hero-video"
+        autoplay muted loop></video>
       </section>
       <section class="hero-text-box">
         <h1 class="hero-heading">Cats</h1>
@@ -82,6 +85,32 @@
       </div>
     </section>
    </section>
+   <!-- Begin About Section -->
+   <section class="about-container">
+    <section class="about-text">
+      <h1>I feel like a blob</h1>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et provident illum minus, dolore ab, eius explicabo ex iste saepe esse error harum eaque numquam nesciunt.</p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi repellendus ea dolorum officiis similique tempora totam culpa?
+      </p>
+    <p><a href="mailto:mrvonderau@student.cia.edu">Email Marlee</a> at mrvonderau@student.cia.edu</p>
+    <section class="about-social">
+      <a href="http://instagram.com/marleevonderau" aria-label="Link to Instagram">
+        <i class="fab fa-instagram" aria-hidden="true"></i>
+      </a>
+      <a href="http://github.com/mrvonderau" aria-label="Link to Github">
+        <i class="fab fa-github" aria-hidden="true"></i>
+      </a>
+    </section>
+    </section>
+    <section class="about-image">
+      <img src="img/crystals 1.JPG" alt="image of crystals">
+    </section>
+
+    </section>
+   </section>
+ 
+
    <script src="js/glightbox.min.js"></script>
    <script type="text/javascript">
   const lightbox = GLightbox({ loop: true});
