added foundation images

--- a/index.html
+++ b/index.html
@@ -83,8 +83,98 @@
             alt=""
         /></a>
       </div>
-    </section>
-   </section>
+    </section><!-- end .portfolio-gallery -->
+  <h1>Foundation Portfolio</h1>
+   </section class="portfolio-gallery">
+  </div> <div class="gallery-item">
+    <a class="glightbox" href="img/city oil painting.jpg">
+      <img
+        class="gallery-img"
+        src="img/city oil painting.jpg"
+        alt="an oil painting of a city by Marlee Vonderau"
+    /></a>
+
+  </div> <div class="gallery-item">
+    <a class="glightbox" href="img/felt storybook.jpg">
+      <img
+        class="gallery-img"
+        src="img/felt storybook.jpg"
+        alt="a felt piece by Marlee Vonderau that includes a house and a sailboat"
+    /></a>
+  </div>
+
+</div> <div class="gallery-item">
+  <a class="glightbox" href="img/Identity Digital Project.jpg">
+    <img
+      class="gallery-img"
+      src="img/Identity Digital Project.jpg"
+      alt="a digital composition by Marlee Vonderau with a tarot box and butterfly"
+  /></a>
+</div>
+
+</div> <div class="gallery-item">
+  <a class="glightbox" href="img/ RTA Holiday Project.jpg">
+    <img
+      class="gallery-img"
+      src="img/ RTA Holiday Project.jpg"
+      alt="a digital composition by Marlee Vonderau of buildings, snow, and an ornament"
+  /></a>
+</div>
+
+</div> <div class="gallery-item">
+  <a class="glightbox" href="img/still life- ball and chain.jpg">
+    <img
+      class="gallery-img"
+      src="img/still life- ball and chain.jpg"
+      alt="a still life by Marlee Vonderau which includes spheres and chains"
+  /></a>
+</div>
+
+</div> <div class="gallery-item">
+  <a class="glightbox" href="img/still life- temperature study.jpg">
+    <img
+      class="gallery-img"
+      src="img/still life- temperature study.jpg"
+      alt="a still life by Marlee Vonderau with which includes shapes and light red color"
+  /></a>
+</div>
+
+</div> <div class="gallery-item">
+  <a class="glightbox" href="img/texture studies.jpg">
+    <img
+      class="gallery-img"
+      src="img/texture studies.jpg"
+      alt="a series of paper constructions used to represent different forms of texture by Marlee Vonderau"
+  /></a>
+</div>
+
+</div> <div class="gallery-item">
+  <a class="glightbox" href="img/wall installation.jpg">
+    <img
+      class="gallery-img"
+      src="img/wall installation.jpg"
+      alt="a wall installation used to show texture by Marlee Vonderau"
+  /></a>
+</div>
+
+</div> <div class="gallery-item">
+  <a class="glightbox" href="">
+    <img
+      class="gallery-img"
+      src=""
+      alt=""
+  /></a>
+</div>
+
+</div> <div class="gallery-item">
+  <a class="glightbox" href="">
+    <img
+      class="gallery-img"
+      src=""
+      alt=""
+  /></a>
+</div>
+  </div>
    <!-- Begin About Section -->
    <section class="about-container">
     <section class="about-text">
