--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
     <link rel="stylesheet" href="css/all.min.css">
   </head>
   <body>
+    <!-- Begin Navigation -->
+    <nav class="nav-bar top-nav" id="top-nav-bar"> 
+      <h1 class="logo"><a href="index.html">Marlee Vonderau</a></h1>
+      <ul class="nav-menu">
+        <li class="nav-item"><a href="#portfolio">Portfolio</a></li>
+        <li class="nav-item"><a href="#about">About</a></li>
+        <li class="nav-item social-nav-item">
+          <a href="https://instagram.com/marleevonderau/" aria-label="Link to Instagram">
+          <i class= fab fa-instagram aria-hidden="true">   </i></a></li>
+      
+      </ul>
+    </nav>
+    <!-- End Navigation -->
     <header class="hero-box">
       <section class="hero-image-box">
         <!-- <img
@@ -26,7 +39,7 @@
       </section>
     </header>
     <!-- Begin Portfolio Gallery -->
-    <section class="portfolio-container">
+    <section class="portfolio-container section-scroll" id="portfolio">
       <h1>Portfolio</h1>
     </section>
     <section class="portfolio-gallery">
@@ -176,7 +189,7 @@
 </div>
   </div>
    <!-- Begin About Section -->
-   <section class="about-container">
+   <section class="about-container section-scroll" id="about">
     <section class="about-text">
       <h1>I feel like a blob</h1>
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et provident illum minus, dolore ab, eius explicabo ex iste saepe esse error harum eaque numquam nesciunt.</p>
@@ -204,6 +217,19 @@
    <script src="js/glightbox.min.js"></script>
    <script type="text/javascript">
   const lightbox = GLightbox({ loop: true});
+
+  window.onscroll = function () {
+    scrollFunction ();
+  };
+
+  function scrollFunction (){
+if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+document.getElementById("top-nav-bar").style.background = "#000000";
+ } else {
+  document.getElementById ("top-nav-bar").style.background = "none";
+  }
+}
+
   </script>
   </body>
 </html>
