--- a/index.html
+++ b/index.html
@@ -191,10 +191,10 @@
    <!-- Begin About Section -->
    <section class="about-container section-scroll" id="about">
     <section class="about-text">
-      <h1>I feel like a blob</h1>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et provident illum minus, dolore ab, eius explicabo ex iste saepe esse error harum eaque numquam nesciunt.</p>
+      <h1> About the Artist</h1>
+      <p> Marlee Vonderau is an art student currently attending The Cleveland Institute of Art. Marlee is from Northeast Ohio and currently resides in Cleveland.</p>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi repellendus ea dolorum officiis similique tempora totam culpa?
+        This portfolio showcases recent works. All art done by Marlee Vonderau.
       </p>
     <p><a href="mailto:mrvonderau@student.cia.edu">Email Marlee</a> at mrvonderau@student.cia.edu</p>
     <section class="about-social">
