--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Amazing Portfolio Duh</title>
+    <title>Marlee Vonderau Portfolio</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/glightbox.min.css">
     <link rel="stylesheet" href="css/all.min.css">
@@ -34,8 +34,8 @@
         autoplay muted loop></video>
       </section>
       <section class="hero-text-box">
-        <h1 class="hero-heading">Cats</h1>
-        <p class="hero-text">cats are cool</p>
+        <h1 class="hero-heading"> Foundation Year 2021</h1>
+        <p class="hero-text">Recent Works</p>
       </section>
     </header>
     <!-- Begin Portfolio Gallery -->
